--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
